k8s/admin_academy_ui_depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-academy-ui-deployment
  namespace: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-academy-ui
  template:
    metadata:
      labels:
        app: admin-academy-ui
    spec:
      containers:
        - name: admin-academy-ui
          image: docker.io/adhirajk/admin_academy_ui:1.0.3
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: admin-academy-ui-cluster-ip-service
  namespace: backend
spec:
  type: ClusterIP
  selector:
    app: admin-academy-ui
  ports:
    - port: 4201
      targetPort: 80
