k8s/admin_service_depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-service
  template:
    metadata:
      labels:
        app: admin-service
    spec:
      containers:
        - name: admin-service
          image: docker.io/adhirajk/admin-service:1.0.0   
          ports:
            - containerPort: 3003
---
apiVersion: v1
kind: Service
metadata:
  name: admin-service-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: admin-service
  ports:
    - port: 3003
      targetPort: 3003
