k8s/auth_service_depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-service
          image: docker.io/adhirajk/auth-service:1.0.9 
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: auth-service
  ports:
    - port: 5000
      targetPort: 5000
