k8s/customer_reverse_proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-reverse-proxy-deployment
  namespace: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customer-reverse-proxy
  template:
    metadata:
      labels:
        app: customer-reverse-proxy
    spec:
      containers:
        - name: customer-reverse-proxy
          image: docker.io/adhirajk/customer-reverse-proxy:1.0.3
          ports:
            - containerPort: 3006
---
apiVersion: v1
kind: Service
metadata:
  name: customer-reverse-proxy-cluster-ip-service
  namespace: backend
spec:
  type: ClusterIP
  selector:
    app: customer-reverse-proxy
  ports:
    - port: 3006
      targetPort: 3006
