k8s/landing_page_depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: landing-page-deployment
  namespace: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: landing-page
  template:
    metadata:
      labels:
        app: landing-page
    spec:
      containers:
        - name: landing-page
          image: docker.io/adhirajk/landing_page:1.0.3
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: landing-page-cluster-ip-service
  namespace: backend
spec:
  type: ClusterIP
  selector:
    app: landing-page
  ports:
    - port: 3002
      targetPort: 80


# kubectl port-forward svc/landing-page-cluster-ip-service 3002:3002
