k8s/sso_ui_depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sso-ui-deployment
  namespace: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sso-ui
  template:
    metadata:
      labels:
        app: sso-ui
    spec:
      containers:
        - name: sso-ui
          image: docker.io/adhirajk/sso_ui:1.0.3
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: sso-ui-cluster-ip-service
  namespace: backend
spec:
  type: ClusterIP
  selector:
    app: sso-ui
  ports:
    - port: 3001
      targetPort: 80
